Bug 120506 - Personas without accent color can't be used
Summary: Personas without accent color can't be used
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.4.0.3 release
Hardware: All All
: medium normal
Assignee: Muhammet Kara
URL:
Whiteboard: target:6.2.0
Keywords:
Depends on:
Blocks: Firefox-Themes
  Show dependency treegraph
 
Reported: 2018-10-11 12:10 UTC by Muhammet Kara
Modified: 2018-10-12 21:59 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Muhammet Kara 2018-10-11 12:10:18 UTC
When we try to use a persona by directly giving its URL, it gives an error if the persona doesn't have the accentcolor info set.

And when searching, it doesn't bring the personas which don't have the accentcolor.

In fact, accentcolor is not used anywhere, in LibreOffice currently. And we should allow such personas.

I propose we stop parsing and storing that info.
Comment 1 Heiko Tietze 2018-10-11 13:36:35 UTC
Could you please explain what accent color means? Maybe we can set missing information automatically or per default.
Comment 2 Muhammet Kara 2018-10-11 13:49:05 UTC
(In reply to Heiko Tietze from comment #1)
> Could you please explain what accent color means? Maybe we can set missing
> information automatically or per default.

No idea. It is just a color value we parse from Persona info and store, but never use.

An example for a persona which doesn't have the accentcolor: https://addons.mozilla.org/en-US/firefox/addon/libreoffice-4-green
Comment 3 Heiko Tietze 2018-10-11 15:28:02 UTC
So why not silently catch the error?
Comment 4 Muhammet Kara 2018-10-11 19:32:20 UTC
(In reply to Heiko Tietze from comment #3)
> So why not silently catch the error?

That's what we are currently doing, and it is a source of unnecessary noise & code clutter, and waste of cycles.

Parsing/processing/storing something useless to us doesn't make sense to me. It is probably some leftover, forgotten there.

And if you are asking me what it is (c#2), then that means it is already dead. :)
Comment 5 Heiko Tietze 2018-10-12 07:11:55 UTC
(In reply to Muhammet Kara from comment #4)
> And if you are asking me what it is (c#2), then that means it is already
> dead. :)

Kill the zombies.
Comment 6 Muhammet Kara 2018-10-12 07:22:30 UTC
(In reply to Heiko Tietze from comment #5)
> (In reply to Muhammet Kara from comment #4)
> > And if you are asking me what it is (c#2), then that means it is already
> > dead. :)
> 
> Kill the zombies.

One homemade flamethrower is coming up for htietze: https://gerrit.libreoffice.org/#/c/61668/
Comment 7 Commit Notification 2018-10-12 11:09:39 UTC
Muhammet Kara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cd861f593bcffb573b5588f2b3b60d70542909ca

tdf#120506: Get rid of unnecessary accentcolor parsing for personas

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Pedro 2018-10-12 13:33:05 UTC
Hi Muhammet

Thank you for reporting, fixing and adding me in CC.

Can this fix be cherry picked to branch 6.1?

Thanks!
Comment 9 Muhammet Kara 2018-10-12 13:52:48 UTC
(In reply to Pedro from comment #8)
> Hi Muhammet
> 
> Thank you for reporting, fixing and adding me in CC.

You're welcome!

> 
> Can this fix be cherry picked to branch 6.1?

Unfortunately, no.

> 
> Thanks!
Comment 10 Pedro 2018-10-12 21:59:47 UTC
(In reply to Muhammet Kara from comment #9)
> (In reply to Pedro from comment #8)
> > Can this fix be cherry picked to branch 6.1?
> 
> Unfortunately, no.

Thank you for the fast answer!
Ok, I'll test it when 6.2 is released! Thanks!