tdf#120506: Get rid of unnecessary accentcolor parsing for personas

Change-Id: I64534fd3d7de90debb9e49e8c636c5fbfac787bf